<resources>
    <string name="oda">오다</string>
    <string name="network_fail">서버 연결 실패</string>
    <string name="network_no_response">응답 없음</string>
    <string name="network_auto_login">자동 로그인</string>
    <string name="network_auto_login_fail">자동 로그인 토큰이 만료되었습니다.</string>
    <string name="app_name">project_oda</string>
    <string name="loading">로딩중...</string>
    <string name="password">비밀번호</string>
    <string name="password_ok">비밀번호 확인</string>
    <string name="id">oda1234</string>
    <string name="auto_login">자동로그인</string>
    <string name="search_password">비밀번호 찾기</string>
    <string name="btn_login">로그인</string>
    <string name="btn_sign_up">회원가입</string>
    <string name="btn_duplicate">중복확인</string>
    <string name="id_match">ID는 4자 이상 10자 이하 영소문자/숫자만을 허용합니다.</string>
    <string name="password_match">PW는 5자 이상 15자 이하의 영소문자/숫자만을 허용합니다.</string>
    <string name="btn_duplicate_ok">사용가능</string>
    <string name="btn_verify">인증하기</string>
    <string name="btn_verify_ok">인증완료</string>
    <string name="btn_post">우편번호 검색</string>
    <string name="edt_post_detail">상세 주소</string>
    <string name="catering_type">요식업 종류</string>
    <string name="catering_0">한식</string>
    <string name="catering_1">양식</string>
    <string name="catering_2">중식</string>
    <string name="catering_3">일식</string>
    <string name="catering_4">분식</string>
    <string name="catering_5">베이커리/카페</string>
    <string name="catering_6">패스트푸드</string>
    <string name="catering_7">기타</string>
    <string name="sign_up">가입하기</string>
    <string name="select_all">전체선택</string>
    <string name="floating_buy_now">바로\n주문</string>
    <string name="go_fast">바로 주문하기 선택상품 </string>
    <string name="business_number">사업자 번호를 입력해주세요.</string>
    <string name="post_information">우편번호를 입력해주세요.</string>
    <string name="welcome1">오다에 오신 것을 환영합니다</string>
    <string name="welcome2">회원가입에 필요한 정보를 기입해주세요.</string>

    <string name="search_keyword">&#160;&#160;검색어를 입력해주세요</string>
    <string name="home_look_detail">자세히 보기  &gt;</string>
    <string name="home_nothing">아직 주문하신 상품이 없습니다\n주문을 하시면 주문패턴을 분석하여\n바로주문의 목록을 채워 드립니다</string>
    <string name="num_item_selected">0개</string>
    <string name="oda_price">오다가</string>

    <string name="menu_home">홈</string>
    <string name="menu_cate">카테고리</string>
    <string name="menu_tip">꿀팁</string>
    <string name="menu_myPage">마이페이지</string>

    <string name="DuplicateNoResponse">중복확인 응답 없음</string>

    <string name="EdtId">사용할 아이디를 입력하세요.</string>
    <string name="CheckCatering">요식업을 선택하십시오.</string>
    <string name="NotMatchPassword">비밀번호가 일치하지 않습니다.</string>
    <string name="FillPassword">비밀번호란을 채우십시오.</string>
    <string name="CheckDuplicate">아이디 중복확인을 하십시오.</string>

    <string name="product">상품상세</string>
    <string name="product_detail">상품 상세</string>
    <string name="product_title_tools">[해발500포크]냉장삼겹살수육용/찌개용/목심수육용(500g)</string>
    <string name="product_price_tools">14,500원</string>
    <string name="product_must_info">상품필수정보</string>
    <string name="product_per_wrap">포장 단위별 용량, 수량, 크기</string>
    <string name="product_per_wrap_tools">500g</string>
    <string name="product_grade">축산법에 따른 등급표시</string>
    <string name="product_grade_tools">해당없음</string>
    <string name="product_resume">축산물이력제 표시유무</string>
    <string name="product_resume_tools">이력관리에 따른 표시있음</string>
    <string name="product_handling">보관방법 또는 취급방법</string>
    <string name="product_handling_tools">-2~10도 이하 냉장보관</string>
    <string name="product_origin">원산지</string>
    <string name="product_origin_tools">국내산</string>
    <string name="product_clean">식품위생법에 따른 수입신고 필함 여부</string>
    <string name="product_clean_tools">해당사항 없음</string>

    <string name="product_review">상품 후기</string>
    <string name="review_write">상품후기 작성하기</string>
    <string name="review_item_title_tools">육질이 부드럽네요.</string>
    <string name="review_writer_tools">17/09/21 djs****님</string>
    <string name="review_content_tools">사실 직접 보고 산건 아니어서 좀 걱정스러웠는데 생각보다 육질이 꽤 부드러워서 만족스러웠어요.</string>

    <string name="product_QnA">상품 QnA</string>
    <string name="QnA_write">QnA 작성하기</string>

    <string name="contentDescription_product_search">상품상세 페이지 돋보기 버튼</string>
    <string name="contentDescription_product_back">상품상세 페이지 뒤로가기 버튼</string>
    <string name="contentDescription_product_cart">상품상세 페이지 장바구니 버튼</string>
    <string name="contentDescription_product_main_image">상품상세 페이지 메인 이미지</string>

    <string name="product_put_cart">장바구니 담기</string>
    <string name="product_order">주문요청하기</string>
    <string name="product_num">수량</string>

    <string name="mypage_coupon">쿠폰</string>
    <string name="mypage_calculate">정산대기</string>
    <string name="mypage_statistics">주문통계</string>
    <string name="mypage_order_list">배송주문내역</string>
    <string name="mypage_total_num">총 0개</string>

    <string-array name="alignment">
        <item>최신순</item>
        <item>가격순</item>
    </string-array>

    <string name="setting">설정</string>
    <string name="push">푸쉬알림</string>
    <string name="account">로그아웃</string>
    <string name="center">고객센터</string>

    <string name="cart">장바구니</string>
    <string name="cart_direct_order">바로주문</string>
    <string name="cart_products">장바구니 상품</string>
    <string name="cart_direct_order_products">바로주문 상품</string>
    <string name="cart_empty">장바구니가 비어있습니다</string>
    <string name="cart_select_sum">선택상품 예상 오다가</string>
    <string name="cart_order_request">주문 요청하기</string>
    <string name="cart_sum">0원</string>
    <string name="cart_total_sum">총 예상 오다가</string>
    <string name="cart_total">0원</string>
    <string name="cart_item_title_tools">경기도 농장직배송 특란 1판 30구</string>
    <string name="cart_item_minus">-</string>
    <string name="cart_item_plus">+</string>
    <string name="cart_item_num">0</string>
    <string name="cart_item_price_tools">14,500원</string>

    <string name="egg">계란</string>
    <string name="berry">딸기</string>
    <string name="rice">쌀</string>
    <string name="cabbage">양배추</string>
    <string name="more">더보기</string>

    <string name="review_post">후기등록</string>
    <string name="review_post_title_tools">제목을 입력해주세요</string>
    <string name="review_post_content_tools">내용을 입력해주세요</string>

    <string name="home_select_at_least">적어도 하나의 상품을 선택해 주세요.</string>
    <string name="cart_select_at_least">선택을 안했거나, 상품의 개수가 모두 0개 입니다.</string>
    <string name="complete_price">예상 오다가</string>

    <string name="order_request">주문요청</string>
    <string name="order_request_complete">주문요청 완료</string>
    <string name="order_request_complete_text">주문요청이 완료되었습니다!</string>
    <string name="order_request_product_info_text">상품정보</string>
    <string name="order_request_complete_product_name">특란 50구 외 4개의 상품</string>
    <string name="order_request_complete_product_price">예상 오다가 45,000원</string>
    <string name="order_request_complete_address">수령정보</string>
    <string name="order_request_complete_address_text">서울시 서대문구 연회동 45-1</string>
    <string name="order_request_complete_time">오전(7시-12시) 수령</string>
    <string name="order_request_complete_push">주문승인이 완료되면 푸시알림을 보내드립니다\n수령 후 일주일 내에 정산해주세요</string>
    <string name="order_request_btn">주문 요청하기</string>
    <string name="order_request_info">수령정보</string>
    <string name="order_request_name_hint">수령 지점명</string>
    <string name="order_request_address">주소지</string>
    <string name="order_request_address_detail">상세 주소지</string>
    <string name="order_request_phone">연락처</string>
    <string name="order_request_time">수령시간</string>
    <string name="order_request_message">요청사항</string>
    <string name="order_request_morning">아침</string>
    <string name="order_request_am">오전</string>
    <string name="complete_am">오전(7시-12시) 수령</string>
    <string name="complete_pm">오후(13시-18시) 수령</string>
    <string name="complete_morning">오전(6시-7시) 수령</string>
    <string name="complete_dawn">오전(3시-6시) 수령</string>
    <string name="order_request_pm">오후</string>
    <string name="order_request_dawn">새벽</string>
    <string name="order_request_set_basic">기본정보로 설정</string>
    <string name="order_request_product_info">주문상품정보</string>
    <string name="order_request_coupon">상품쿠폰</string>
    <string name="order_request_coupon_num">0장</string>
    <string name="order_request_coupon_btn">조회</string>
    <string name="order_request_estimated_price">예상 주문 오다가</string>
    <string name="order_request_coupon_price">쿠폰 적용</string>
    <string name="order_request_total_price">총 예상 오다가</string>
    <string name="order_request_zero">0원</string>
    <string name="order_request_product_title_tools">[해발500포크]냉장삼겹살 수육용</string>
    <string name="order_request_product_price_tools">9,000원</string>
    <string name="order_request_product_num_tools">/ 3개</string>

    <string name="my_page_list_parent_delivery">9/20\n도착예정</string>
    <string name="my_page_list_parent_delivery_btn">배송추적</string>
    <string name="my_page_list_parent_header">17/09/18 주문번호 17091800021</string>
    <string name="my_page_list_parent_expand">주문 상세보기</string>
    <string name="my_page_list_parent_fold">주문 간략보기</string>

    <string name="order_request_product_child_title_tools">CJ 비비고왕교자490x2</string>
    <string name="order_request_product_child_price_tools">7,890원</string>
    <string name="order_request_product_child_num_tools">5개</string>
    <string name="order_request_product_child_delivery_tools">9/25\n도착예정</string>
</resources>