<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.signUp.SignUpActivity">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/splash_back"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClick"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/welcome1"
                android:textAlignment="center"
                android:textColor="@color/normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome2"
                android:textAlignment="center"
                android:textColor="@color/normal" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_sign_up_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="17dp"
                    android:hint="@string/id"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_duplicate"
                    android:layout_width="78dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="33dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/btn_duplicate"
                    android:onClick="onClick"
                    android:text="@string/btn_duplicate"
                    android:textColor="@color/normal"
                    android:textSize="15sp" />

            </FrameLayout>

            <EditText
                android:id="@+id/edt_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="17dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_sign_up_password_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="17dp"
                android:hint="@string/password_ok"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_business_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="17dp"
                    android:hint="@string/business_number"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_verify"
                    android:layout_width="78dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/btn_duplicate"
                    android:onClick="onClick"
                    android:text="@string/btn_verify"
                    android:textColor="@color/normal"
                    android:textSize="15sp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="17dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_post"
                    android:layout_width="78dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/btn_duplicate"
                    android:onClick="onClick"
                    android:text="@string/btn_post"
                    android:textColor="@color/normal"
                    android:textSize="15sp" />

            </FrameLayout>

            <EditText
                android:id="@+id/edt_post_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="17dp"
                android:hint="@string/edt_post_detail"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="27dp"
                android:text="@string/catering_type"
                android:textColor="@color/splash_back"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_0"
                    style="@style/catering_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catering_0" />

                <RadioButton
                    android:id="@+id/rb_1"
                    style="@style/catering_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:text="@string/catering_1" />

                <RadioButton
                    android:id="@+id/rb_2"
                    style="@style/catering_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:text="@string/catering_2" />

                <RadioButton
                    android:id="@+id/rb_3"
                    style="@style/catering_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:text="@string/catering_3" />

                <RadioButton
                    android:id="@+id/rb_4"
                    style="@style/catering_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:text="@string/catering_4" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_5"
                    style="@style/catering_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catering_5" />

                <RadioButton
                    android:id="@+id/rb_6"
                    style="@style/catering_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:text="@string/catering_6" />

                <RadioButton
                    android:id="@+id/rb_7"
                    style="@style/catering_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:text="@string/catering_7" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/sign_up"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="onClick"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>