<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.main.MainActivity">

    <FrameLayout
        android:id="@+id/frame_product_topBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/splash_back"
            android:gravity="center"
            android:text="@string/product"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_product_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="62dp"
            android:contentDescription="@string/contentDescription_product_search"
            android:onClick="onClick"
            android:src="@drawable/ic_search" />

        <ImageView
            android:id="@+id/iv_product_cart"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="17dp"
            android:contentDescription="@string/contentDescription_product_cart"
            android:onClick="onClick"
            android:src="@drawable/ic_cart" />

        <ImageView
            android:id="@+id/iv_product_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/contentDescription_product_back"
            android:onClick="onClick"
            android:src="@drawable/ic_arrow_back" />
    </FrameLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/product_tab"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/frame_product_topBar"
        app:tabGravity="fill" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/product_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="56dp" />


    <LinearLayout
        android:id="@+id/linear_product_select_num"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/product_bottom_bar"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linear_product_cart_order"
        >

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textColor="@color/catering"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/product_num"/>

        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/cart_item_num_selecter">

            <TextView
                android:id="@+id/tv_product_select_minus"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:textAlignment="center"
                android:text="@string/cart_item_minus"
                android:textColor="@color/catering"
                android:onClick="onClick"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_product_select_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cart_item_num"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/cart_item_num"
                android:textColor="@color/catering"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_product_select_plus"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:textAlignment="center"
                android:text="@string/cart_item_plus"
                android:textColor="@color/catering"
                android:onClick="onClick"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_product_cart_order"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_product_put_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/normal"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onClick"
            android:text="@string/product_put_cart"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_product_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/splash_back"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onClick"
            android:text="@string/product_order"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
